# hippo_coding_exercise

./: README.md  constants.py  goals_1_2.py  goals_3_4.py  makefile  pyproject.toml
task_1_2/: incorrect_data.json  result.json
task_3/: part-00000-44941804-7c23-4d9d-b63b-4f7e0b3dcfc5-c000.json
task_4/: part-00000-70cae3f4-5a52-49ba-a201-7b5d4fa8c22d-c000.json
