[tool.poetry]
name = "hippo-coding-exercise"
version = "0.1.0"
description = ""
authors = ["Timur <ximmit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
pyspark = "^3.5.4"
black = "^25.1.0"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
